WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
138795
[WinCairo] Compile error, CoreGraphics header file included.
https://bugs.webkit.org/show_bug.cgi?id=138795
Summary
[WinCairo] Compile error, CoreGraphics header file included.
peavo
Reported
2014-11-17 07:13:24 PST
CoreGraphics is not available on WinCairo.
Attachments
Patch
(1.27 KB, patch)
2014-11-17 07:18 PST
,
peavo
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
peavo
Comment 1
2014-11-17 07:18:55 PST
Created
attachment 241710
[details]
Patch
Myles C. Maxfield
Comment 2
2014-11-17 07:39:23 PST
Unofficial r=me
Brent Fulgham
Comment 3
2014-11-17 07:52:15 PST
Comment on
attachment 241710
[details]
Patch R=me
peavo
Comment 4
2014-11-17 08:37:42 PST
Thanks for reviewing :) Does the patch also need a r+, or will it be committed anyway?
Brent Fulgham
Comment 5
2014-11-17 10:21:20 PST
Comment on
attachment 241710
[details]
Patch Grumble. I reviewed from my phone, and I guess I lost the r+ when I set the cq+. Setting both again!
peavo
Comment 6
2014-11-17 10:25:50 PST
(In reply to
comment #5
)
> Comment on
attachment 241710
[details]
> Patch > > Grumble. I reviewed from my phone, and I guess I lost the r+ when I set the > cq+. Setting both again!
Thanks :)
WebKit Commit Bot
Comment 7
2014-11-17 10:58:52 PST
Comment on
attachment 241710
[details]
Patch Clearing flags on attachment: 241710 Committed
r176210
: <
http://trac.webkit.org/changeset/176210
>
WebKit Commit Bot
Comment 8
2014-11-17 10:58:57 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug