[WinCairo] Compile error, CoreGraphics header file included. https://bugs.webkit.org/show_bug.cgi?id=138795

Patch by peavo@outlook.com <peavo@outlook.com> on 2014-11-17
Reviewed by Brent Fulgham.

CoreGraphics is not available on WinCairo.

* platform/graphics/win/FontCacheWin.cpp:

Canonical link: https://commits.webkit.org/156649@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@176210 268f45cc-cd09-0410-ab3c-d52691b4dbfc